<resources>
    <string name="app_name">File Manager</string>
    <string name="media_dialog">Media preview</string>
    <string name="dir_info">Folder Information</string>
    <string name="total_space_label_format">sdcard: Total %.2f GB</string>
    <string name="available_space_label_format">\t\tAvailable %.2f GB</string>
    <string name="myfiles_delete_dialog_title">Delete</string>
    <string name="myfiles_rename_dialog_title">Rename</string>
    <string name="myfiles_create_folder_dialog_title">Create folder</string>
    <string name="myfiles_options_menu_title">Options</string>
    <string name="myfiles_options_menu_delete">Delete</string>
    <string name="myfiles_options_menu_rename">Rename</string>
    <string name="myfiles_options_menu_copy">Copy</string>
    <string name="myfiles_options_menu_move">Move</string>
    <string name="myfiles_options_menu_zip">Add to archive</string>
    <string name="myfiles_options_menu_extract">Extract here</string>
    <string name="menu_new_folder">Create folder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_move">Move</string>
    <string name="myfiles_options_menu_details">Details</string>

    <string name="menu_delete">Delete</string>
    <string name="fab_add_file_title">New file</string>
    <string name="fab_add_folder_title">New folder</string>
    <string name="myfiles_options_menu_share">Share</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort_type">Sort</string>
    <string name="select_all">Select all</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Settings-->
    <string name="settings_label">Settings</string>
    <string name="settings_show_hidden_files">Show hidden files</string>

    <string name="key_hidden_files">hidden</string>
    <string name="key_image_thumbs">image_thumbs</string>
    <string name="key_root_mode">root_mode</string>
    <string name="key_themes">themes</string>
    <string name="key_theme_style">theme_style</string>


    <string name="theme_style">Theme</string>
    <string name="customize_theme">Customize Theme</string>

    <string name="settings_image_thumbs_desc">Show image preview</string>
    <string name="settings_root_mode_desc">Enable root browser</string>
    <string name="settings_show_hidden_files_desc">Show hidden files or folder</string>
    <string name="settings_image_thumbs_summary">Show image preview insted of image icon</string>

    <string name="files_and_folder_category">Files &amp; folders</string>


    <string name="action_settings">Settings</string>
</resources>
