<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_delete"
        android:title="@string/myfiles_options_menu_delete"/>
    <item android:id="@+id/menu_copy"
        android:title="@string/myfiles_options_menu_copy"/>
    <item android:id="@+id/menu_move"
        android:title="@string/myfiles_options_menu_move"/>
    <item android:id="@+id/menu_rename"
        android:title="@string/myfiles_options_menu_rename"/>
    <item android:title="@string/myfiles_options_menu_share"
        android:id="@+id/menu_share"/>
    <item android:id="@+id/menu_details"
        android:title="@string/myfiles_options_menu_details"/>
    <item android:id="@+id/menu_zip"
        android:title="@string/myfiles_options_menu_zip"/>
</menu>